fix(light fixes, landscape scene upgrade)

--- a/index.html
+++ b/index.html
@@ -3,34 +3,53 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite App</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-  <div id="squares-canvas"></div>
+  <section id="face-section">
+    <div id="face-canvas"></div>
 
-  <section class="section n_1"></section>
-  <section class="section n_2"></section>
-  <section class="section n_3"></section>
-  <section class="section n_4"></section>
-  <section class="section n_5"></section>
-  <section class="section n_6"></section>
-  <section class="section n_7"></section>
-  <section class="section n_8"></section>
-  <section class="section n_9"></section>
-  <section class="section n_10"></section>
-  <section class="section n_11"></section>
-  <section class="section n_12"></section>
-  <section class="section n_13"></section>
-  <section class="section n_14"></section>
-  <section class="section n_15"></section>
-  <section class="section n_16"></section>
-  <section class="section n_17"></section>
-  <section class="section n_18"></section>
-  <section class="section n_19"></section>
+    <section class="section n_1"></section>
+    <section class="section n_2"></section>
+    <section class="section n_3"></section>
+    <section class="section n_4"></section>
+    <section class="section n_5"></section>
+    <section class="section n_6"></section>
+  </section>
+
+  <section id="squares-section">
+    <div id="squares-canvas"></div>
+
+    <section class="section n_1"></section>
+    <section class="section n_2"></section>
+    <section class="section n_3"></section>
+    <section class="section n_4"></section>
+    <section class="section n_5"></section>
+    <section class="section n_6"></section>
+    <section class="section n_7"></section>
+    <section class="section n_8"></section>
+    <section class="section n_9"></section>
+    <section class="section n_10"></section>
+  </section>
+
+  <section id="landscape-section">
+    <div id="landscape-canvas"></div>
+
+    <section class="section n_1"></section>
+    <section class="section n_2"></section>
+    <section class="section n_3"></section>
+    <section class="section n_4"></section>
+    <section class="section n_5"></section>
+    <section class="section n_6"></section>
+    <section class="section n_7"></section>
+    <section class="section n_8"></section>
+    <section class="section n_9"></section>
+    <section class="section n_10"></section>
+  </section>
+
   <script type="module" src="/main.js"></script>
 </body>
 
