feat(major): loading sreen, particles systems

--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
 </head>
 
 <body>
+
+  <div id="loader">
+    <h1 class="loader__counter"><span class="counter__percent">0</span></h1>
+    <div class="loader__overlay">
+      <div class="loader__bar"></div>
+      <div class="loader__bar"></div>
+      <div class="loader__bar"></div>
+      <div class="loader__bar"></div>
+      <div class="loader__bar"></div>
+      <div class="loader__bar"></div>
+      <div class="loader__bar"></div>
+      <div class="loader__bar"></div>
+      <div class="loader__bar"></div>
+      <div class="loader__bar"></div>
+    </div>
+  </div>
+
   <section id="face-section">
     <div id="face-canvas"></div>
 
